deployment/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: portfolio
  namespace: erikandreasklokk
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gateway
  hostnames:
    - portfolio.s9n.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portfolio
          port: 80
